# pytango-rpimonitor

./: .gitignore  LICENCE  README.md  pyproject.toml
tangods_rpimonitor/: __init__.py  rpimonitor.py
